# plai

./: .clang-format  .gitignore  Makefile  meson.build
containers/: Dockerfile.archlinux  Dockerfile.buildenv  Dockerfile.debian  Dockerfile.devel  Dockerfile.prod  build-buildenv.sh  build.sh  run-buildenv.sh  run.sh
doc/: api.yaml  generate-html.sh  rest.md  serve-html.sh
lib/: meson.build
lib/include/: plai.hpp
lib/include/plai/: buffer.hpp  c_str.hpp  concepts.hpp  crypto.hpp  exceptions.hpp  format.hpp  frac.hpp  inplace.hpp  match.hpp  persist_buffer.hpp  prof.hpp  queue.hpp  rect.hpp  ring_buffer.hpp  store.hpp  time.hpp  type_traits.hpp  vec.hpp  virtual.hpp
lib/include/plai/ex/: completion_signatures.hpp  scheduler.hpp  visit_on.hpp  yield.hpp
lib/include/plai/flow/: concepts.hpp  connector.hpp  pipeline.hpp  sink.hpp  spec.hpp  src.hpp
lib/include/plai/frontend/: events.hpp  exceptions.hpp  frontend.hpp  options.hpp  renderer.hpp  texture.hpp  type.hpp  window.hpp
lib/include/plai/fs/: read.hpp
lib/include/plai/logs/: level.hpp  logs.hpp
lib/include/plai/media/: codec_type.hpp  decoder.hpp  decoding_pipeline.hpp  decoding_stream.hpp  demux.hpp  exceptions.hpp  forward.hpp  frame.hpp  frame_converter.hpp  hwaccel.hpp  media.hpp  packet.hpp  stream_view.hpp  stream_view_span.hpp  util.hpp
lib/include/plai/media2/: async_video_processor.hpp  decoder.hpp  media.hpp
lib/include/plai/mods/: decoder.hpp  media_store.hpp  module.hpp  player.hpp
lib/include/plai/modules/: decoder.hpp  frame_buffer.hpp
lib/include/plai/net/: api.hpp
lib/include/plai/net/http/: api.hpp  macros.hpp  method.hpp  query_params.hpp  request.hpp  response.hpp  server.hpp  target.hpp
lib/include/plai/os/: signal.hpp
lib/include/plai/play/: media_src.hpp  player.hpp
lib/include/plai/sched/: executor.hpp  post_chain.hpp  task.hpp
lib/include/plai/sched/detail/: post_recurse.hpp  step.hpp
lib/include/plai/st/: detail.hpp  state_machine.hpp  tag.hpp
lib/include/plai/util/: algorithm.hpp  array.hpp  cast.hpp  defer.hpp  enum_arr.hpp  match.hpp  memfn.hpp  memory_info.hpp  parse.hpp  ring_buffer.hpp  str.hpp  tags.hpp  tuple.hpp  view_generator.hpp
lib/src/: crypto.cpp  meson.build  prof.cpp  sqlite.hpp  store.cpp
lib/src/frontend/: frontend.cpp  meson.build  renderer.cpp  sdl2.cpp  sdl2.hpp  window.cpp
lib/src/fs/: meson.build  read.cpp
lib/src/logs/: logs.cpp
lib/src/media/: av_check.hpp  decoder.cpp  decoding_pipeline.cpp  decoding_stream.cpp  demux.cpp  exceptions.cpp  frame.cpp  frame_converter.cpp  hwaccel.cpp  meson.build  packet.cpp  stream_view.cpp  stream_view_span.cpp  util.cpp
lib/src/media2/: async_video_processor.cpp  meson.build
lib/src/mods/: alpha_calc.hpp  decoder.cpp  meson.build  player.cpp
lib/src/mods/player/: blend_sm.cpp  blend_sm.hpp  ctx.cpp  ctx.hpp  image_sm.cpp  image_sm.hpp  meson.build  root_sm.cpp  root_sm.hpp
lib/src/modules/: decoder.cpp
lib/src/net/: api.cpp  meson.build
lib/src/net/http/: meson.build  server.cpp  target.cpp
lib/src/os/: meson.build  signal.cpp
lib/src/play/: alpha_calc.hpp  media_processor.cpp  media_processor.hpp  meson.build  player.cpp
script/: client.sh  plai.sh
subprojects/: cli11.wrap  cpp-httplib.wrap  reflect-cpp.wrap  stdexec.wrap
test/: meson.build
test/manual/: blend_player.cpp  decoder.cpp  hwaccel_list.cpp  meson.build  new_player.cpp  periodic_task.cpp  pkt_count.cpp  player.cpp  rest.cpp  store.cpp  void_decoder.cpp  watermark_player.cpp
test/unit/: buffer.cpp  crypto.cpp  decode.cpp  demux.cpp  frac.cpp  frame.cpp  frontend.cpp  inplace.cpp  meson.build  parse.cpp  persist_buffer.cpp  prof.cpp  queue.cpp  ring_buffer.cpp  store.cpp  str.cpp  vec.cpp  view_generator.cpp
test/unit/flow/: meson.build  pipeline.cpp  pipeline_spec.cpp
test/unit/net/http/: meson.build  target.cpp
test/unit/sched/: meson.build  post_chain.cpp  task.cpp
test/unit/st/: machine.cpp  meson.build
